# writing-assistant-ai-mcp

./: .cursorrules  .mcp.json  CHANGELOG.md  CODEOWNERS  LICENSE  README.md  acp.json  auth_middleware.py  codeql.yml  cosign-sign.yaml  glama.json  llms.txt  package.json  pypi-publish.yml  pyproject.toml  scorecard.yml  server.json  server.py  smithery.yaml
.github/: FUNDING.yml
.github/workflows/: mcp-smithery-publish.yml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
.well-known/mcp/: server-card.json
ISSUE_TEMPLATE/: bug_report.md  feature_request.md
