[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "writing-assistant-ai-mcp"
version = "1.0.5"
description = "Writing Assistant Ai tools for AI agents. Capabilities: generate headlines, score readability, analyze tone. Built by MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "writing", "assistant"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/writing-assistant-ai-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py", "auth_middleware.py"]

[project.scripts]
writing_assistant_ai_mcp = "server:main"
